--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main id="root">
         <h1>{{message}}</h1>
-        <img :src="img" alt="">
+        <img :src="changingImg" @click="changeImg()" alt="">
     </main>
     <!-- development version -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
